--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,13 @@ dependencies:
   firebase_core: ^0.5.2
   flutter_launcher_icons: ^0.8.1
 
+flutter_icons:
+  android: true
+  image_path_android: "assets/logo.png"
+
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/logo.png"    
+    sdk: flutter    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
