--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^0.5.2
   chips_choice: ^2.0.1
   flutter_launcher_icons: ^0.8.1
+  http: ^0.12.2
+  shared_preferences: ^0.5.12+4
 
 flutter_icons:
   android: true
