--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,21 +28,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  curved_navigation_bar: ^0.3.4
-  flutter_signin_button: ^1.1.0
-  google_fonts: ^1.1.1
+  firebase_core: ^0.5.2
   firebase_auth: ^0.18.3
   google_sign_in: "^4.5.1"
   flutter_facebook_auth: ^1.0.1
-  firebase_core: ^0.5.2
+  curved_navigation_bar: ^0.3.4
+  flutter_signin_button: ^1.1.0
+  google_fonts: ^1.1.1
   chips_choice: ^2.0.1
-  flutter_launcher_icons: ^0.8.1
   http: ^0.12.2
-  shared_preferences: ^0.5.12+4
-
-flutter_icons:
-  android: true
-  image_path_android: "assets/logo.png"
+  rxdart: ^0.24.1
 
 dev_dependencies:
   flutter_test:
