--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   google_fonts: ^1.1.1
   chips_choice: ^2.0.1
   json_annotation: ^3.1.1
-  html_character_entities: ^0.1.2+4
+  html: ^0.14.0+4
+  flutter_html: ^1.1.0
 
 dev_dependencies:
   flutter_test:
