--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,14 @@ dependencies:
   flutter_bloc: ^6.1.1
   equatable: ^1.2.5
   google_fonts: ^1.1.1
+  loading_overlay: ^0.2.1
   chips_choice: ^2.0.1
   json_annotation: ^3.1.1
   html: ^0.14.0+4
   shimmer: ^1.1.2
   flutter_html: ^1.1.0
+  shared_preferences: ^0.5.12+4
+  hive: ^1.4.4+1
 
 dev_dependencies:
   flutter_test:
