--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,13 +44,13 @@ dependencies:
   html: ^0.14.0+4
   shimmer: ^1.1.2
   flutter_html: ^1.1.0
-  shared_preferences: ^0.5.12+4
   hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter    
-  
+  hive_generator: ^0.8.2
   json_serializable: ^3.5.0
   build_runner: ^1.10.6
 # For information on the generic Dart part of this file, see the
