--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="id.rumahcoding.arman">
+    package="id.magangrumahcoding.arman">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:name="io.flutter.app.FlutterApplication"
