--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -24,42 +24,40 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_core: ^0.5.2
-  firebase_auth: ^0.18.3
+  firebase_core: ^1.0.0
+  firebase_auth: ^1.0.0
   google_sign_in: "^4.5.1"
   flutter_facebook_auth: ^1.0.1
   curved_navigation_bar: ^0.3.4
   flutter_signin_button: ^1.1.0
-  dio: ^3.0.10
+  dio: ^4.0.0-beta6
   flutter_bloc: ^6.1.1
+  http_parser: ^4.0.0
   equatable: ^1.2.5
-  google_fonts: ^1.1.1
+  google_fonts: ^2.0.0
   loading_overlay: ^0.2.1
   chips_choice: ^2.0.1
   json_annotation: ^3.1.1
   html: ^0.14.0+4
   shimmer: ^1.1.2
   flutter_html: ^1.1.0
-  hive: ^1.4.4+1
-  hive_flutter: ^0.3.1
+  hive: ^2.0.0
+  hive_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter    
-  hive_generator: ^0.8.2
+    sdk: flutter
+  hive_generator: ^1.0.0
   json_serializable: ^3.5.0
   build_runner: ^1.10.6
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-    
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -73,10 +71,8 @@ flutter:
     - assets/no_thumbnail.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
