--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="arman"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Arman"
+        android:icon="@mipmap/launcher_icon">
        <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
