--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,14 @@ dev_dependencies:
   hive_generator: ^1.0.0
   json_serializable: ^3.5.0
   build_runner: ^1.10.6
+  flutter_launcher_icons: ^0.9.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/logo.png"
 
 # The following section is specific to Flutter.
 flutter:
